# gfort2py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yaml  .travis.yml  .zenodo.json  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  dependabot.yml  gfort2py  gfort2py.py  lint.sh  new_release.sh  parseMod.py  parseTree.py  parseTreeLib.py  pyproject.toml  requirements.txt  requirements_dev.txt  runTestsSingle.sh  run_test.sh  setup.cfg  setup.py  testPy.py  test_mod.f90  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  black.yml  ci-cd.yml  ci-mac.yml  ci-old.yml  ci.yml  ci_old.yml  coveralls.yml  cygwin.yml  isort.yml  linux.yml  linux_quad.yml  macos.yml  mypy.yml  pypi.yml  pypy.yml  qemu.yml  windows.yml  zenodo.schema  zenodo.yml  zizmor.yml
.github/workflows/scripts/: make_dockers.py  run_arm.sh  run_ppc64.sh  run_s390x.sh
docs/: debugging.md  support.md  test_suite.md
docs/source/: conf.py  fortranabi.rst  index.rst  mod_files.rst  testsuite.rst  usage.rst
dump/: testQuad.f90
extras/: py.supp
gfort2py/: TKR.py  __init__.py  allocate.py  allocation.f90  arrays.py  cmplx.py  errors.py  fArrays.py  fCompile.py  fDT.py  fParameters.py  fProc.py  fProcPtr.py  fScalars.py  fStrings.py  fUnary.py  fVar.py  fVar_t.py  fnumpy.c  fnumpy.pyx  fobject.py  functions.py  generate_allocations.py  gfort2py.py  module_parse.py  parseMod.py  selector.py  strings.py  types.py  utils.py  var.py  version.py
gfort2py/args/: __init__.py  base.py
gfort2py/compilation/: __init__.py  compile.py  module.py  platform.py  utils.py
gfort2py/old/: fArrays.py  fDT.py  fProc.py  fProcPtr.py  fScalars.py  fStrings.py  fVar.py  fVar_t.py
gfort2py/parseMod/: __init__.py  makefile  module_parse.py  parseMod.py  parseMod14.py  parseMod15.py  parseModCommon.py  utils.py  utils_cpython.c  utils_cpython.pyx
gfort2py/procedures/: __init__.py  argument.py  arguments.py  functions.py  proc_pointer.py  procedures.py  subroutine.py
gfort2py/procedures/arguments/: __init__.py  argument.py  arguments.py  extra_arguments.py  return_arguments.py
gfort2py/types/: __init__.py  arrays.py  base.py  character.py  complex.py  dt.py  integer.py  logical.py  module.py  numpy_convert.py  parameters.py  real.py  unsigned.py
src/gfort2py/: __init__.py  fnumpy.pyx  functions.py  gfort2py.py
src/parseMod/: __init__.py  parseMod.py  parseModCommon.py  utils.py  utils_cpython.pyx
tests/: Makefile  README.md  basic.f90  basic_test.py  common.f90  common.py  common_test.py  compile_mod_test.f90  compile_nomod_test.f90  compile_test.py  complex.f90  complex_test.py  conftest.py  dt.f90  dt_test.py  dummy_arrays.f90  dummy_arrays_test.py  elemental.f90  elemental_test.py  explicit_arrays.f90  explicit_arrays_test.py  gfort2py_test.py  gh55_test.py  gh56_test.py  interface.f90  isoc_test.py  kinds_check.f90  leak_regression_test.py  make_new_test_case.py  namelist.f90  oo.f90  oo_test.py  params2.py  pdt.f90  pdt_test.py  pointers.f90  pointers_test.py  proc_ptrs.f90  proc_ptrs_test.py  quad_test.py  (+18 more)
tests/src/: Makefile  basic.f90  com.f90  complex.f90  dt.f90  dummy_arrays.f90  elemental.f90  explicit_arrays.f90  gh55.f90  gh56.f90  isoc.f90  leak_regression.f90  oo.f90  params2.f90  pdt.f90  pointers.f90  proc_ptrs.f90  quad.f90  strings.f90  t_params_modules.f90  unicode.f90
tests/src15/: Makefile  unsign.f90
tests/templates/: module_params.py  module_variables.py  utils.py
