[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=7.1.0"]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "skipIfWindows: Windows tests using capsys are flaky at the moment",
]
addopts = "-s"

[tool.setuptools_scm]




[project]
name = "gfort2py"
authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]
description = "Python bindings for Fortran"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "numpy >=1.13.0",
    "platformdirs >=3",
    "dataclasses_json >=0.6",
    "gfModParser >= 1.0.1"
]

dynamic = ["version"]

[tool.setuptools]
packages = ["gfort2py"]


[project.optional-dependencies]
test = ['pytest']
quad = ['pyquadp']
dev = ['pre-commit','black']
