[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=7.1.0"]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

markers = [
    "skipIfWindows: Windows tests can be flaky",
]

addopts = "-s"

[tool.setuptools_scm]




[project]
name = "gfort2py"
authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]
description = "Python bindings for Fortran"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "numpy >=2.0.0",
    "platformdirs >=3",
    "gfModParser >= 1.2.1"
]

dynamic = ["version"]

[project.optional-dependencies]
test = ['pytest']
quad = ['pyquadp >= 2.0.4']
dev = ['pre-commit','black','isort']
types = ["mypy","types-setuptools", "types-toml"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".github"]
skips = ["B603", "B404"]