[metadata]
name = gfort2py
description = "Python bindings for Fortran"
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Farmer
author_email = robert.j.farmer37@gmail.com
url = https://github.com/rjfarmer/gfort2py
license = GPLv2+
license_file = COPYING.txt
platforms = unix, linux, osx

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Code Generators

[options]
python_requires = >=3.6
zip_safe = False
package_dir=
    =gfort2py
packages=find:
install_requires = 
    cython
    numpy
    cython-setuptools
    pytest
include_package_data = true

[options.packages.find]
where=gfort2py

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
    cython-setuptools
    pytest
dev = 
    cython
    cython-setuptools
    pytest

[cython-defaults]
include_dirs = gfort2py/

[cython-module: parseMod.utils_cpython]
sources = gfort2py/parseMod/utils_cpython.pyx
include_dirs = eval(__import__('numpy').get_include())
				
[cython-module: fnumpy]
sources = gfort2py/fnumpy.pyx
include_dirs = eval(__import__('numpy').get_include())