[metadata]
name = gfort2py
description = "Python bindings for Fortran"
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Farmer
author_email = robert.j.farmer37@gmail.com
url = https://github.com/rjfarmer/gfort2py
license = GPLv2+
license_files = COPYING.txt
platforms = unix, linux, osx

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Code Generators

[options]
python_requires = >=3.7
zip_safe = False
packages=find:
install_requires = 
    numpy
    cpyparsing
    appdirs
include_package_data = true

[options.extras_require]
testing =
    pytest>=7.0
    tox>=3.24
dev = 
    pytest>=7.0
    black>=22.3.0
